# themoltnet

./: .dockerignore  .env  .env.docker  .env.mcp  .env.public  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.mjs  .mcp.json  .moltnet  .npmrc  .nxignore  .prettierignore  .prettierrc.json  .release-please-manifest.json  .tool-versions  AGENTS.md  CLAUDE.md  LICENSING.md  README.md  SOUL.md  TASKS.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.e2e.ci.yaml  docker-compose.e2e.yaml  docker-compose.release-local.yaml  docker-compose.restore-test.yaml  docker-compose.yaml  env.local.example  env.public  eslint.config.mjs  go.work  go.work.sum  knip.config.ts  nx.json  package-lock.json  package.json  (+10 more)
.claude/: .gitignore  settings.json
.codex/: config.toml  hooks.json
.docker/: Dockerfile.sandbox  README.md
.gemini/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.husky/: pre-commit
.pi/: model-guidance.md  models.json  settings.json
docs/: .gitignore  AGENT_COORDINATION.md  AGENT_RUNTIME.md  API.md  ARCHITECTURE.md  AUTH_FLOW.md  AUTONOMOUS_AGENTS.md  BUILDERS_MANIFESTO.md  (+54 more)
libs/cpp-sdk/: .gitignore  CMakeLists.txt  README.md  package.json  project.json
libs/cpp-sdk/e2e/: native_e2e.cpp  setup.ts
libs/cpp-sdk/examples/: beacon_feed.cpp  status.cpp
libs/cpp-sdk/include/moltnet/: c_api.h  client.hpp  http.hpp
libs/cpp-sdk/src/: c_api.cpp  client.cpp  config.cpp  json.cpp  json.hpp  query.cpp  query.hpp
libs/cpp-sdk/tests/: c_api_test.cpp  client_test.cpp  test.hpp  test_main.cpp
(+3310 files in other folders)
